--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,10 @@
 	<string name="button_on">开启</string>
 	<string name="button_off">关闭</string>
 	<string name="time_default">00:00</string>
+	<string name="text_time_delay">距离生效还有</string>
+	<string name="text_day">天</string>
+	<string name="text_hour">小时</string>
+	<string name="text_minute">分钟</string>
+	
 	
 </resources>
